add mmap memory and more allocators.

--- a/crystal/memory/test/CMakeLists.txt
+++ b/crystal/memory/test/CMakeLists.txt
@@ -1,5 +1,12 @@
 # Copyright 2017-present Yeolar
 
 test_sources(
+  FreeStackTest.cpp
+  MMapFileTest.cpp
+  MMapMemoryTest.cpp
+  MemoryManagerTest.cpp
+  QueueTest.cpp
+  RecycledAllocatorTest.cpp
+  SimpleAllocatorTest.cpp
   SysAllocatorTest.cpp
 )
