--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ build_directory(crystal/math)
 build_directory(crystal/memory)
 build_directory(crystal/serializer)
 build_directory(crystal/serializer/record)
+build_directory(crystal/storage/kv)
 build_directory(crystal/type)
 
 add_library(crystal
@@ -79,6 +80,7 @@ add_library(crystal
   $<TARGET_OBJECTS:crystal_memory>
   $<TARGET_OBJECTS:crystal_serializer>
   $<TARGET_OBJECTS:crystal_serializer_record>
+  $<TARGET_OBJECTS:crystal_storage_kv>
   $<TARGET_OBJECTS:crystal_type>
 )
 
@@ -96,6 +98,7 @@ if(GTEST_FOUND)
   add_subdirectory(crystal/memory/test)
   add_subdirectory(crystal/serializer/test)
   add_subdirectory(crystal/serializer/record/test)
+  add_subdirectory(crystal/storage/kv/test)
   add_subdirectory(crystal/type/test)
 endif()
 
