--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ build_directory(crystal/storage/builder)
 build_directory(crystal/storage/index)
 build_directory(crystal/storage/index/bitmap)
 build_directory(crystal/storage/kv)
+build_directory(crystal/storage/table)
 build_directory(crystal/strategy)
 build_directory(crystal/type)
 
@@ -87,6 +88,7 @@ add_library(crystal
   $<TARGET_OBJECTS:crystal_storage_index>
   $<TARGET_OBJECTS:crystal_storage_index_bitmap>
   $<TARGET_OBJECTS:crystal_storage_kv>
+  $<TARGET_OBJECTS:crystal_storage_table>
   $<TARGET_OBJECTS:crystal_strategy>
   $<TARGET_OBJECTS:crystal_type>
 )
@@ -109,6 +111,7 @@ if(GTEST_FOUND)
   add_subdirectory(crystal/storage/index/test)
   add_subdirectory(crystal/storage/index/bitmap/test)
   add_subdirectory(crystal/storage/kv/test)
+  add_subdirectory(crystal/storage/table/test)
   add_subdirectory(crystal/type/test)
 endif()
 
