--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ configure_file(
 
 # Work on all sub directories
 build_directory(crystal _base)
+build_directory(crystal/dataframe)
 build_directory(crystal/foundation)
 build_directory(crystal/foundation/http)
 build_directory(crystal/math)
@@ -80,6 +81,7 @@ build_directory(crystal/strategy)
 build_directory(crystal/type)
 
 add_library(crystal
+  $<TARGET_OBJECTS:crystal_dataframe>
   $<TARGET_OBJECTS:crystal_foundation>
   $<TARGET_OBJECTS:crystal_foundation_http>
   $<TARGET_OBJECTS:crystal_memory>
@@ -105,6 +107,7 @@ add_subdirectory(crystal/foundation/http/examples)
 # Test
 if(GTEST_FOUND)
   enable_testing()
+  add_subdirectory(crystal/dataframe/test)
   add_subdirectory(crystal/memory/test)
   add_subdirectory(crystal/serializer/test)
   add_subdirectory(crystal/serializer/record/test)
