add Document and DataView.

--- a/crystal/dataframe/test/CMakeLists.txt
+++ b/crystal/dataframe/test/CMakeLists.txt
@@ -1,6 +1,9 @@
 # Copyright 2017-present Yeolar
 
 test_sources(
+  DataViewTest.cpp
+  DocumentArrayTest.cpp
+  DocumentTest.cpp
   DoubleLayerArrayTest.cpp
   DynamicTableTest.cpp
   NumericIndexArrayTest.cpp
