add operator and search op

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,8 @@ build_directory(crystal/foundation)
 build_directory(crystal/foundation/http)
 build_directory(crystal/math)
 build_directory(crystal/memory)
+build_directory(crystal/operator)
+build_directory(crystal/operator/search)
 build_directory(crystal/serializer)
 build_directory(crystal/serializer/record)
 build_directory(crystal/storage/builder)
@@ -85,6 +87,7 @@ add_library(crystal
   $<TARGET_OBJECTS:crystal_foundation>
   $<TARGET_OBJECTS:crystal_foundation_http>
   $<TARGET_OBJECTS:crystal_memory>
+  $<TARGET_OBJECTS:crystal_operator_search>
   $<TARGET_OBJECTS:crystal_serializer>
   $<TARGET_OBJECTS:crystal_serializer_record>
   $<TARGET_OBJECTS:crystal_storage_builder>
@@ -109,6 +112,8 @@ if(GTEST_FOUND)
   enable_testing()
   add_subdirectory(crystal/dataframe/test)
   add_subdirectory(crystal/memory/test)
+  add_subdirectory(crystal/operator/test)
+  add_subdirectory(crystal/operator/search/test)
   add_subdirectory(crystal/serializer/test)
   add_subdirectory(crystal/serializer/record/test)
   add_subdirectory(crystal/storage/builder/test)
