--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,7 @@ install(TARGETS crystal
 
 # Binary
 add_subdirectory(crystal/foundation/http/examples)
+add_subdirectory(crystal/service)
 add_subdirectory(crystal/tools)
 
 # Test
