add RecordArray; add ConvertToDynamic ConvertToRecordArray op

--- a/crystal/memory/test/CMakeLists.txt
+++ b/crystal/memory/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Copyright 2017-present Yeolar
 
 test_sources(
+  ChunkedMemoryTest.cpp
   FreeStackTest.cpp
   MMapFileTest.cpp
   MMapMemoryTest.cpp
