rename crystal-httpserver -> crystal-searcher

--- a/crystal/service/CMakeLists.txt
+++ b/crystal/service/CMakeLists.txt
@@ -1,8 +1,8 @@
 # Copyright 2017-present Yeolar
 
-add_executable(crystal-httpserver
-  crystal-httpserver.cpp
+add_executable(crystal-searcher
+  crystal-searcher.cpp
 )
-target_link_libraries(crystal-httpserver crystal)
+target_link_libraries(crystal-searcher crystal)
 
-install(TARGETS crystal-httpserver DESTINATION ${CMAKE_INSTALL_BINDIR})
+install(TARGETS crystal-searcher DESTINATION ${CMAKE_INSTALL_BINDIR})
