I plan to implement a new serializable data structure, the data deserialization overhead is 0, and can be expressed in types similar to the standard library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,7 @@ build_directory(crystal/operator/search)
 build_directory(crystal/query)
 build_directory(crystal/serializer)
 build_directory(crystal/serializer/record)
+build_directory(crystal/serializer/record/containers)
 build_directory(crystal/storage/builder)
 build_directory(crystal/storage/index)
 build_directory(crystal/storage/index/bitmap)
@@ -121,6 +122,7 @@ add_library(crystal
   $<TARGET_OBJECTS:crystal_query>
   $<TARGET_OBJECTS:crystal_serializer>
   $<TARGET_OBJECTS:crystal_serializer_record>
+  $<TARGET_OBJECTS:crystal_serializer_record_containers>
   $<TARGET_OBJECTS:crystal_storage_builder>
   $<TARGET_OBJECTS:crystal_storage_index>
   $<TARGET_OBJECTS:crystal_storage_index_bitmap>
@@ -144,6 +146,7 @@ add_subdirectory(crystal/tools)
 # Test
 if(GTEST_FOUND)
   enable_testing()
+  include_directories(${GTEST_INCLUDE_DIR})
   add_subdirectory(crystal/dataframe/test)
   add_subdirectory(crystal/memory/test)
   add_subdirectory(crystal/operator/test)
@@ -151,6 +154,7 @@ if(GTEST_FOUND)
   add_subdirectory(crystal/operator/search/test)
   add_subdirectory(crystal/serializer/test)
   add_subdirectory(crystal/serializer/record/test)
+  add_subdirectory(crystal/serializer/record/containers/test)
   add_subdirectory(crystal/storage/builder/test)
   add_subdirectory(crystal/storage/index/test)
   add_subdirectory(crystal/storage/index/bitmap/test)
